add divs, test filepaths

--- a/index.html
+++ b/index.html
@@ -4,9 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="assets/css/style-index.css" rel="stylesheet" type="text/css" />
     <title>Ronin 347</title>
 </head>
 <body>
-    
+    <header>
+        <div>
+        <h1>logo</h1>
+        </div>
+    </header>
+    <section>
+        <div>
+            Hero Image
+        </div>
+    </section>
+    <section>
+        <div>
+            About Section
+        </div>
+    </section>
+    <section>
+        <div>
+            call to action blurb
+        </div>
+    </section>
+    <section>
+        <div>
+            form
+        </div>
+    </section>
+    <footer>
+        <div>
+            footer
+        </div>
+    </footer>
 </body>
 </html>
