add nav, organise element spacing for top part of index

--- a/index.html
+++ b/index.html
@@ -9,13 +9,28 @@
 </head>
 <body>
     <header>
-        <div>
+        <div id="logo-container">
         <h1>logo</h1>
+        <div class="a1">
+            <span id="logo-r">R</span><span id="logo-o">o</span><span id="logo-nin">nin
+           <span id="logo-347">347</span>
+         </div>
         </div>
+        <nav>
+            <ul id="navigation">
+                <li><a href="index.html" alt="home">Home</a></li>
+                <li><a href="projects.html" alt="projects">Project Gallery</a></li>
+                <li><a href="#" alt="Social">Social</a></li>
+                <li><a href="faq.html" alt="home">FAQ</a></li>
+            </ul>
+        </nav>
     </header>
-    <section>
-        <div>
+    <section id="hero-container">
+        <div id="hero-project">
             Hero Image
+        </div>
+        <div id="hero-call-box">
+            Link to this project
         </div>
     </section>
     <section>
