add logo with css styling

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 <body>
     <header>
         <div id="logo-container">
-        <h1>logo</h1>
         <div class="a1">
             <span id="logo-r">R</span><span id="logo-o">o</span><span id="logo-nin">nin
            <span id="logo-347">347</span>
@@ -33,8 +32,9 @@
             Link to this project
         </div>
     </section>
-    <section>
-        <div>
+    <section id="about-container">
+        <h2>About Ronin</h2>
+        <div id="about">
             About Section
         </div>
     </section>
@@ -43,8 +43,8 @@
             call to action blurb
         </div>
     </section>
-    <section>
-        <div>
+    <section id="contact-container">
+        <div id="contact-bg">
             form
         </div>
     </section>
