--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,13 +8,14 @@
     <link href="assets/css/style-index.css" rel="stylesheet" type="text/css" />
     <title>Ronin 347</title>
 </head>
+
 <body>
     <header>
         <div id="logo-container">
-        <div class="a1">
-            <span id="logo-r">R</span><span id="logo-o">o</span><span id="logo-nin">nin
-           <span id="logo-347">347</span>
-         </div>
+            <div class="a1">
+                <span id="logo-r">R</span><span id="logo-o">o</span><span id="logo-nin">nin
+                    <span id="logo-347">347</span>
+            </div>
         </div>
         <nav>
             <ul id="navigation">
@@ -26,7 +28,9 @@
     </header>
     <section id="hero-container">
         <div id="hero-project">
-            Hero Image
+            <video autoplay muted loop id="myVideo">
+                <source src="assets/videos/hero.mp4" type="video/mp4">
+              </video>
         </div>
         <div id="hero-call-box">
             Link to this project
@@ -54,4 +58,5 @@
         </div>
     </footer>
 </body>
+
 </html>
