add underline on nav link hover

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         </div>
         <nav>
             <ul id="navigation">
-                <li><a href="index.html" alt="home">Home</a></li>
-                <li><a href="projects.html" alt="projects">Project Gallery</a></li>
+                <li><span id="nav-hover-home">O</span><a href="index.html" alt="home">Home</a></li>
+                <li><a href="projects.html" alt="projects">Projects</a></li>
                 <li><a href="#" alt="Social">Social</a></li>
                 <li><a href="faq.html" alt="home">FAQ</a></li>
             </ul>
