--- a/index.html
+++ b/index.html
@@ -30,26 +30,60 @@
         <div id="hero-project">
             <video autoplay muted loop id="myVideo">
                 <source src="assets/videos/hero.mp4" type="video/mp4">
-              </video>
+            </video>
         </div>
         <div id="hero-call-box">
             Link to this project
         </div>
     </section>
     <section id="about-container">
-        <h2>About Ronin</h2>
-        <div id="about">
-            About Section
-        </div>
+        
+        <div id="about-image-container"><div id="about-image">
+        </div></div>
+        <div id="about-text-container">
+        <div id="about-text">
+            <h2 id="about-heading-mobile">About Ronin</h2><br><br>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus consectetur ex, nec hendrerit
+                libero. Nam ac consectetur tortor. Vestibulum semper feugiat nisi a aliquet. Curabitur auctor sem vitae
+                lorem feugiat volutpat. Aliquam erat volutpat. Nunc auctor, nibh eu varius cursus, nunc magna vehicula
+                leo, in posuere ligula lectus ac eros. Praesent sit amet risus ac elit convallis blandit.<br><br>
+
+                Sed sodales tortor in quam vehicula hendrerit. Duis at mauris rhoncus, varius urna et, sagittis sapien.
+                Sed iaculis magna a lacus ultrices lacinia. In aliquet dui pulvinar ante fringilla, quis lobortis felis
+                ultrices. Sed id est efficitur, bibendum augue a, lobortis dolor. Sed scelerisque dolor id dictum
+                pellentesque. Phasellus nisi sem, pulvinar sed sollicitudin sollicitudin, rutrum in justo.<br><br>
+            </p>
+        </div></div>
     </section>
     <section>
-        <div>
-            call to action blurb
+        <div id="call-to-actions">
+            <h2>call to action blurb</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus consectetur ex, nec hendrerit
+                libero. Nam ac consectetur tortor. Vestibulum semper feugiat nisi a aliquet. Curabitur auctor sem vitae
+                lorem feugiat volutpat. Aliquam erat volutpat. Nunc auctor, nibh eu varius cursus, nunc magna vehicula
+                leo, in posuere ligula lectus ac eros. Praesent sit amet risus ac elit convallis blandit.<br><br>
+
+                Sed sodales tortor in quam vehicula hendrerit. Duis at mauris rhoncus, varius urna et, sagittis sapien.
+                Sed iaculis magna a lacus ultrices lacinia. In aliquet dui pulvinar ante fringilla, quis lobortis felis
+                ultrices. Sed id est efficitur, bibendum augue a, lobortis dolor. Sed scelerisque dolor id dictum
+                pellentesque. Phasellus nisi sem, pulvinar sed sollicitudin sollicitudin, rutrum in justo.<br><br>
+            </p>
         </div>
     </section>
     <section id="contact-container">
         <div id="contact-bg">
-            form
+            <form method="post" action="#" class="contact-form">
+                <h2>Contact Form</h2>
+                <label for="name">Name</label>
+                <input class="form-text" id="name" name="name" type="text" required>
+                <label for="email">Email Address</label>
+                <input class="form-text" type="email" id="email" name="email" required>
+                <label for="number">Contact Number (Optional)</label>
+                <input class="form-text" type="tel" id="number" name="number" pattern="[0-9]{3}-[0-9]{3}-[0-9]{3}-[0-9]{4}">
+                <label for="note">Additional Information</label>
+                <textarea class="form-text form-note" id="note" name="note"></textarea>
+                <input class="submit-contact" type="submit" value="Contact">
+            </form>
         </div>
     </section>
     <footer>
