add footer and base styling

--- a/index.html
+++ b/index.html
@@ -87,10 +87,34 @@
         </div>
     </section>
     <footer>
-        <div>
-            footer
+        <div id="social-footer">
+            <div id="social">
+                <h2>See what i'm up to</h2>
+                <ul class="social-buttons">
+                    <li>
+                        <a id="twitter" href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit our facebook page (opens in a new tab)"><i class="fa-brands fa-twitter-square"></i></a>
+                    </li>
+                    <li>
+                        <a id="youtube" href="https://youtube.com" target="_blank" rel="noopener" aria-label="Visit our facebook page (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
+                    </li>
+                    <li>
+                        <a id="instagram" href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our facebook page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
+                    </li>
+                </ul>
+            </div>
+            <div id="company-address">
+                Dan Cahill<br>
+                Ronin 347<br>
+                Flat 66, 15 Ibroxholm Oval<br>
+                City of Glasgow<br>
+                G51 2TY<br>
+            </div>
+            <div id="cal-rex-git">
+                <p>Site Developed for Ronin347 by <a href:"#" aria-label="link to Cal-Rex's Github" target="_blank" rel="noopener">Cal-Rex</a></p>
+            </div>
+            <div id="copyright"><p>Copyright Ronin347 Media 2022 ©</p></div>
         </div>
     </footer>
 </body>
-
+<script src="https://kit.fontawesome.com/85f184e105.js" crossorigin="anonymous"></script>
 </html>
