add structure to projects page, basic css and placeholder content

--- a/projects.html
+++ b/projects.html
@@ -1,12 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="assets/css/style-projects.css" rel="stylesheet" type="text/css" />
     <title>Ronin 347 Projects</title>
 </head>
+
 <body>
-    
+    <header>
+        <div id="logo-container">
+            <div class="a1">
+                <span id="logo-r">R</span><span id="logo-o">o</span><span id="logo-nin">nin
+                    <span id="logo-347">347</span>
+            </div>
+        </div>
+        <nav>
+            <ul id="navigation">
+                <li><span id="nav-hover-home">O</span><a href="index.html" alt="home">Home</a></li>
+                <li><a href="projects.html" alt="projects">Projects</a></li>
+                <li><a href="#" alt="Social">Social</a></li>
+                <li><a href="faq.html" alt="home">FAQ</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section class="project">
+        <div class="project-bg" id="project1">
+        <div class="project-video-container">
+        <div class="project-video">
+            <iframe width="956" height="538" src="https://www.youtube.com/embed/DTd3d1hlRs8"
+                title="Scotland's Railway - Onwards" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </div></div>
+        <div class="project-info-container">
+        <div class="project-info">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus consectetur ex, nec hendrerit
+                libero. Nam ac consectetur tortor. Vestibulum semper feugiat nisi a aliquet. Curabitur auctor sem vitae
+                lorem feugiat volutpat. Aliquam erat volutpat. Nunc auctor, nibh eu varius cursus, nunc magna vehicula
+                leo, in posuere ligula lectus ac eros. Praesent sit amet risus ac elit convallis blandit.</p>
+        </div></div></div>
+    </section>
+    <section class="project">
+        <div class="project-bg" id="project1">
+        <div class="project-video-container">
+        <div class="project-video">
+            <iframe width="956" height="538" src="https://www.youtube.com/embed/DTd3d1hlRs8"
+                title="Scotland's Railway - Onwards" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </div></div>
+        <div class="project-info-container">
+        <div class="project-info">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus consectetur ex, nec hendrerit
+                libero. Nam ac consectetur tortor. Vestibulum semper feugiat nisi a aliquet. Curabitur auctor sem vitae
+                lorem feugiat volutpat. Aliquam erat volutpat. Nunc auctor, nibh eu varius cursus, nunc magna vehicula
+                leo, in posuere ligula lectus ac eros. Praesent sit amet risus ac elit convallis blandit.</p>
+        </div></div></div>
+    </section>
+    <section class="project">
+        <div class="project-bg" id="project1">
+        <div class="project-video-container">
+        <div class="project-video">
+            <iframe width="956" height="538" src="https://www.youtube.com/embed/DTd3d1hlRs8"
+                title="Scotland's Railway - Onwards" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </div></div>
+        <div class="project-info-container">
+        <div class="project-info">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus consectetur ex, nec hendrerit
+                libero. Nam ac consectetur tortor. Vestibulum semper feugiat nisi a aliquet. Curabitur auctor sem vitae
+                lorem feugiat volutpat. Aliquam erat volutpat. Nunc auctor, nibh eu varius cursus, nunc magna vehicula
+                leo, in posuere ligula lectus ac eros. Praesent sit amet risus ac elit convallis blandit.</p>
+        </div></div></div>
+    </section>
+    <section class="project">
+        <div class="project-bg" id="project1">
+        <div class="project-video-container">
+        <div class="project-video">
+            <iframe width="956" height="538" src="https://www.youtube.com/embed/DTd3d1hlRs8"
+                title="Scotland's Railway - Onwards" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </div></div>
+        <div class="project-info-container">
+        <div class="project-info">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus consectetur ex, nec hendrerit
+                libero. Nam ac consectetur tortor. Vestibulum semper feugiat nisi a aliquet. Curabitur auctor sem vitae
+                lorem feugiat volutpat. Aliquam erat volutpat. Nunc auctor, nibh eu varius cursus, nunc magna vehicula
+                leo, in posuere ligula lectus ac eros. Praesent sit amet risus ac elit convallis blandit.</p>
+        </div></div></div>
+    </section>
 </body>
+
 </html>
