update logo post client meeting

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <div id="logo-container">
             <div class="a1">
-                <span id="logo-r">R</span><span id="logo-o">o</span><span id="logo-nin">nin
+                <span id="logo-ronin">Ronin</span>
                     <span id="logo-347">347</span>
             </div>
         </div>
