--- a/index.html
+++ b/index.html
@@ -19,19 +19,23 @@
         </div>
         <nav>
             <ul id="navigation">
-                <li><span id="nav-hover-home">O</span><a href="index.html" alt="home">Home</a></li>
+                <li><a href="index.html" alt="home">Home</a></li>
                 <li><a href="projects.html" alt="projects">Projects</a></li>
                 <li><a href="#" alt="Social">Social</a></li>
                 <li><a href="faq.html" alt="home">FAQ</a></li>
             </ul>
+            
         </nav>
     </header>
+    <div id="ink-partition">here i am!</div>
     <section id="hero-container">
         <div id="hero-project">
             <video autoplay muted loop id="myVideo">
-                <source src="assets/videos/hero.mp4" type="video/mp4">
+                <source src="assets/videos/Website-landing.mp4" type="video/mp4">
             </video>
         </div>
+    </section>
+    <section id="current-project-link">
         <div id="hero-call-box">
             Link to this project
         </div>
