--- a/index.html
+++ b/index.html
@@ -12,19 +12,17 @@
 <body>
     <header>
         <div id="logo-container">
-            <div class="a1">
                 <span id="logo-ronin">Ronin</span>
-                    <span id="logo-347">347</span>
-            </div>
+                <span id="logo-347">347</span>
         </div>
         <nav>
-            <ul id="navigation">
-                <li><a href="index.html" alt="home">Home</a></li>
-                <li><a href="projects.html" alt="projects">Projects</a></li>
-                <li><a href="#" alt="Social">Social</a></li>
-                <li><a href="faq.html" alt="home">FAQ</a></li>
-            </ul>
-            
+            <div class="navigation" id="navigation-1">
+                <a href="index.html" alt="home"><div>Home</div></a>
+                <a href="projects.html" alt="projects"><div>Projects</div></a>
+            </div>
+            <div class="navigation" id="navigation-2">
+                <a href="#social-footer" alt="Social"><div>Social</div></a>
+                <a href="faq.html" alt="FAQ"><div>FAQ</div></a>
         </nav>
     </header>
     <div id="ink-partition">here i am!</div>
@@ -41,23 +39,30 @@
         </div>
     </section>
     <section id="about-container">
-        
-        <div id="about-image-container"><div id="about-image">
-        </div></div>
-        <div id="about-text-container">
-        <div id="about-text">
-            <h2 id="about-heading-mobile">About Ronin</h2><br><br>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus consectetur ex, nec hendrerit
-                libero. Nam ac consectetur tortor. Vestibulum semper feugiat nisi a aliquet. Curabitur auctor sem vitae
-                lorem feugiat volutpat. Aliquam erat volutpat. Nunc auctor, nibh eu varius cursus, nunc magna vehicula
-                leo, in posuere ligula lectus ac eros. Praesent sit amet risus ac elit convallis blandit.<br><br>
 
-                Sed sodales tortor in quam vehicula hendrerit. Duis at mauris rhoncus, varius urna et, sagittis sapien.
-                Sed iaculis magna a lacus ultrices lacinia. In aliquet dui pulvinar ante fringilla, quis lobortis felis
-                ultrices. Sed id est efficitur, bibendum augue a, lobortis dolor. Sed scelerisque dolor id dictum
-                pellentesque. Phasellus nisi sem, pulvinar sed sollicitudin sollicitudin, rutrum in justo.<br><br>
-            </p>
-        </div></div>
+        <div id="about-image-container">
+            <div id="about-image">
+            </div>
+        </div>
+        <div id="about-text-container">
+            <div id="about-text">
+                <h2 id="about-heading-mobile">About Ronin</h2><br><br>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus consectetur ex, nec hendrerit
+                    libero. Nam ac consectetur tortor. Vestibulum semper feugiat nisi a aliquet. Curabitur auctor sem
+                    vitae
+                    lorem feugiat volutpat. Aliquam erat volutpat. Nunc auctor, nibh eu varius cursus, nunc magna
+                    vehicula
+                    leo, in posuere ligula lectus ac eros. Praesent sit amet risus ac elit convallis blandit.<br><br>
+
+                    Sed sodales tortor in quam vehicula hendrerit. Duis at mauris rhoncus, varius urna et, sagittis
+                    sapien.
+                    Sed iaculis magna a lacus ultrices lacinia. In aliquet dui pulvinar ante fringilla, quis lobortis
+                    felis
+                    ultrices. Sed id est efficitur, bibendum augue a, lobortis dolor. Sed scelerisque dolor id dictum
+                    pellentesque. Phasellus nisi sem, pulvinar sed sollicitudin sollicitudin, rutrum in justo.<br><br>
+                </p>
+            </div>
+        </div>
     </section>
     <section>
         <div id="call-to-actions">
@@ -83,7 +88,8 @@
                 <label for="email">Email Address</label>
                 <input class="form-text" type="email" id="email" name="email" required>
                 <label for="number">Contact Number (Optional)</label>
-                <input class="form-text" type="tel" id="number" name="number" pattern="[0-9]{3}-[0-9]{3}-[0-9]{3}-[0-9]{4}">
+                <input class="form-text" type="tel" id="number" name="number"
+                    pattern="[0-9]{3}-[0-9]{3}-[0-9]{3}-[0-9]{4}">
                 <label for="note">Additional Information</label>
                 <textarea class="form-text form-note" id="note" name="note"></textarea>
                 <input class="submit-contact" type="submit" value="Contact">
@@ -96,13 +102,19 @@
                 <h2>See what i'm up to</h2>
                 <ul class="social-buttons">
                     <li>
-                        <a id="twitter" href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit our facebook page (opens in a new tab)"><i class="fa-brands fa-twitter-square"></i></a>
+                        <a id="twitter" href="https://twitter.com" target="_blank" rel="noopener"
+                            aria-label="Visit our facebook page (opens in a new tab)"><i
+                                class="fa-brands fa-twitter-square"></i></a>
                     </li>
                     <li>
-                        <a id="youtube" href="https://youtube.com" target="_blank" rel="noopener" aria-label="Visit our facebook page (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
+                        <a id="youtube" href="https://youtube.com" target="_blank" rel="noopener"
+                            aria-label="Visit our facebook page (opens in a new tab)"><i
+                                class="fa-brands fa-youtube"></i></a>
                     </li>
                     <li>
-                        <a id="instagram" href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our facebook page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
+                        <a id="instagram" href="https://instagram.com" target="_blank" rel="noopener"
+                            aria-label="Visit our facebook page (opens in a new tab)"><i
+                                class="fa-brands fa-instagram"></i></a>
                     </li>
                 </ul>
             </div>
@@ -114,11 +126,15 @@
                 G51 2TY<br>
             </div>
             <div id="cal-rex-git">
-                <p>Site Developed for Ronin347 by <a href:"#" aria-label="link to Cal-Rex's Github" target="_blank" rel="noopener">Cal-Rex</a></p>
+                <p>Site Developed for Ronin347 by <a href:"#" aria-label="link to Cal-Rex's Github" target="_blank"
+                        rel="noopener">Cal-Rex</a></p>
             </div>
-            <div id="copyright"><p>Copyright Ronin347 Media 2022 ©</p></div>
+            <div id="copyright">
+                <p>Copyright Ronin347 Media 2022 ©</p>
+            </div>
         </div>
     </footer>
 </body>
 <script src="https://kit.fontawesome.com/85f184e105.js" crossorigin="anonymous"></script>
+
 </html>
