add media queries for nav bg video for portrait orientated devices

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a href="faq.html" alt="FAQ"><div>FAQ</div></a>
         </nav>
     </header>
-    <div id="ink-partition">here i am!</div>
+    <div id="ink-partition"></div>
     <section id="hero-container">
         <div id="hero-project">
             <video autoplay muted loop id="myVideo">
