add about sectiondesign and working media queries

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a href="faq.html" alt="FAQ"><div>FAQ</div></a>
         </nav>
     </header>
-    <div id="ink-partition"></div>
+    <div class="ink-partition"></div>
     <section id="hero-container">
         <div id="hero-project">
             <video autoplay muted loop id="myVideo">
@@ -39,12 +39,12 @@
         </div>
     </section>
     <section id="about-container">
-
+        <div class="ink-partition" id="ink-partition-about-top"></div>
         <div id="about-image-container">
-            <div id="about-image">
+            <div id="about-image"><div id="about-image-shade"></div>
             </div>
         </div>
-        <div id="about-text-container">
+        <!-- <div id="about-text-container"> -->
             <div id="about-text">
                 <h2 id="about-heading-mobile">About Ronin</h2><br><br>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus consectetur ex, nec hendrerit
@@ -62,7 +62,8 @@
                     pellentesque. Phasellus nisi sem, pulvinar sed sollicitudin sollicitudin, rutrum in justo.<br><br>
                 </p>
             </div>
-        </div>
+        <!-- </div> -->
+        <div class="ink-partition" id="ink-partition-about-bottom"></div>
     </section>
     <section>
         <div id="call-to-actions">
