format call to action section

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <!-- </div> -->
         <div class="ink-partition" id="ink-partition-about-bottom"></div>
     </section>
-    <section>
+    <section id="call-to-action-container">
         <div id="call-to-actions">
             <h2>call to action blurb</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus consectetur ex, nec hendrerit
