update footer, begin debugging contact form

--- a/index.html
+++ b/index.html
@@ -80,8 +80,11 @@
             </p>
         </div>
     </section>
+   
     <section id="contact-container">
+        <div class="ink-partition" id="ink-partition-contact"></div>
         <div id="contact-bg">
+            <div class="form-box">
             <form method="post" action="#" class="contact-form">
                 <h2>Contact Form</h2>
                 <label for="name">Name</label>
@@ -94,11 +97,13 @@
                 <label for="note">Additional Information</label>
                 <textarea class="form-text form-note" id="note" name="note"></textarea>
                 <input class="submit-contact" type="submit" value="Contact">
-            </form>
+            </form></div>
         </div>
     </section>
+    </div>
     <footer>
         <div id="social-footer">
+            <div class="ink-partition" id="ink-partition-footer"></div>
             <div id="social">
                 <h2>See what i'm up to</h2>
                 <ul class="social-buttons">
@@ -118,13 +123,6 @@
                                 class="fa-brands fa-instagram"></i></a>
                     </li>
                 </ul>
-            </div>
-            <div id="company-address">
-                Dan Cahill<br>
-                Ronin 347<br>
-                Flat 66, 15 Ibroxholm Oval<br>
-                City of Glasgow<br>
-                G51 2TY<br>
             </div>
             <div id="cal-rex-git">
                 <p>Site Developed for Ronin347 by <a href:"#" aria-label="link to Cal-Rex's Github" target="_blank"
