new nav style, implement grid layout to accomodate layout changes from client meeting

--- a/index.html
+++ b/index.html
@@ -11,25 +11,25 @@
 
 <body>
     <header>
-        <div id="logo-container">
+        <nav>
+        <div class="logo" id="logo-container">
                 <span id="logo-ronin">Ronin</span>
                 <span id="logo-347">347</span>
         </div>
-        <nav>
-            <div class="navigation" id="navigation-1">
+            <div class="nleft" id="navigation-1">
                 <a href="index.html" alt="home"><div>Home</div></a>
                 <a href="projects.html" alt="projects"><div>Projects</div></a>
             </div>
-            <div class="navigation" id="navigation-2">
+            <div class="nright" id="navigation-2">
                 <a href="#social-footer" alt="Social"><div>Social</div></a>
                 <a href="faq.html" alt="FAQ"><div>FAQ</div></a>
         </nav>
     </header>
-    <div class="ink-partition"></div>
-    <section id="hero-container">
+    <div class="ink-partition" id="ink-partition-nav"></div>
+    <section class="hero" id="hero-container">
         <div id="hero-project">
             <video autoplay muted loop id="myVideo">
-                <source src="assets/videos/Website-landing.mp4" type="video/mp4">
+                <source src="assets/videos/hero-video-final.mp4" type="video/mp4">
             </video>
         </div>
     </section>
@@ -65,7 +65,7 @@
         <!-- </div> -->
         <div class="ink-partition" id="ink-partition-about-bottom"></div>
     </section>
-    <section id="call-to-action-container">
+    <section class="call-to-action" id="call-to-action-container">
         <div id="call-to-actions">
             <h2>call to action blurb</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus consectetur ex, nec hendrerit
@@ -106,7 +106,7 @@
     </section>
     </div>
     <footer>
-        <div id="social-footer">
+        <div class="footer" id="social-footer">
             <div class="ink-partition" id="ink-partition-footer"></div>
             <div id="social">
                 <h2>See what i'm up to</h2>
