add playlist button and styling, including media queries for playlist button

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                 <video autoplay muted loop>
                     <source src="assets/videos/hero-video-final.mp4" type="video/mp4">
                 </video>
+                <a href="#">Watch our Portfolio</a>
                 <div class="ink-partition ip-bottom-hero"></div>
             </section>
 
@@ -114,7 +115,7 @@
     <footer>
         <div class="footer" id="social-footer">
             <div id="social">
-                <h2>See what i'm up to</h2>
+                <h2>Follow us</h2>
                 <ul class="social-buttons">
                     <li>
                         <a id="twitter" href="https://twitter.com" target="_blank" rel="noopener"
