revert nav animation change

--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
             <!-- nav buttons -->
             <div class="nleft" id="navigation-1">
                 <a href="index.html" alt="home">
-                    <div>Home</div>
+                    About
                 </a>
-                <a href="projects.html" alt="projects">
-                    <div>Projects</div>
+                <a href="testimonials.html" alt="Testimonials from our clients and partners">
+                    Testimonials
                 </a>
             </div>
             <div class="nright" id="navigation-2">
                 <a href="#social-footer" alt="Social">
-                    <div>Social</div>
+                    Social
                 </a>
                 <a href="faq.html" alt="FAQ">
-                    <div>FAQ</div>
+                    FAQ
                 </a>
         </nav>
         </div>
