--- a/testimonials.html
+++ b/testimonials.html
@@ -20,7 +20,7 @@
         <nav>
             <ul id="navigation">
                 <li><span id="nav-hover-home">O</span><a href="index.html" alt="home">Home</a></li>
-                <li><a href="projects.html" alt="projects">Projects</a></li>
+                <li><a href="testimonials.html" alt="Testimonials from our clients and partners">Testimonials</a></li>
                 <li><a href="#" alt="Social">Social</a></li>
                 <li><a href="faq.html" alt="home">FAQ</a></li>
             </ul>
