create alternative navigation style

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <video autoplay muted loop>
                     <source src="assets/videos/hero-video-final.mp4" type="video/mp4">
                 </video>
-                <a href="#">Watch our Portfolio</a>
+                <a href="nav-test.html">Watch our Portfolio</a>
                 <div class="ink-partition ip-bottom-hero"></div>
             </section>
 
