complete new nav styling

--- a/nav-test.html
+++ b/nav-test.html
@@ -10,10 +10,10 @@
 <body>
 <nav>
     <button class="nav-burger">
-        <span><i class="fa-solid fa-bars" id="burger-hide"></i></span><span class="burger-active">X</span>
+        <span><i class="fa-solid fa-bars" id="burger-hide"></i></span>
         <div class="nav-content">
             <ul>
-                <a href="index.html" alt="home"><li>Home</li></a>
+                <a href="index.html" alt="home"><li id="nav-active">Home</li></a>
                 <a href="about.html" alt="About us"><li>About Us</li></a>
                 <a href="testimonials.html" alt="Testimonials from our clients and partners"><li>Testimonials</li></a>
                 <a href="faq.html" alt="FAQ"><li>FAQ</li></a>
