--- a/index.html
+++ b/index.html
@@ -10,105 +10,99 @@
 </head>
 
 <body>
-<div class="bg"><div class="bg-overlay"></div></div>
-    <!-- top -->
-    <header>
+    <div class="bg">
+        <div class="bg-overlay"></div>
+        
+    </div>
+    <div class="index-layout">
         <nav>
-            <!-- logo -->
+            <button class="nav-burger">
+                <span><i class="fa-solid fa-bars" id="burger-hide"></i></span>
+                <div class="nav-content">
+                    <ul>
+                        <a href="index.html" alt="home"><li id="nav-active">Home</li></a>
+                        <a href="about.html" alt="About us"><li>About Us</li></a>
+                        <a href="testimonials.html" alt="Testimonials from our clients and partners"><li>Testimonials</li></a>
+                        <a href="faq.html" alt="FAQ"><li>FAQ</li></a>
+                        <a href="#social-footer" alt="Social media contacts"><li>Social</li></a>
+                        <a href="mailto:#" alt="contact us by email"></a><li>Contact</li></a>
+                    </ul>
+                </div>
+        </button></nav>
+        <header class="hero" id="hero-project">
+            <div id="logo-positioner">
+                <!-- <div class="spacer"></div> -->
             <div class="logo" id="logo-container">
                 <span id="logo-ronin">Ronin</span>
                 <span id="logo-347">347</span>
             </div>
-
-            <!-- nav buttons -->
-            <div class="nleft" id="navigation-1">
-                <a href="index.html" alt="home">
-                    About
-                </a>
-                <a href="testimonials.html" alt="Testimonials from our clients and partners">
-                    Testimonials
-                </a>
-            </div>
-            <div class="nright" id="navigation-2">
-                <a href="#social-footer" alt="Social">
-                    Social
-                </a>
-                <a href="faq.html" alt="FAQ">
-                    FAQ
-                </a>
-        </nav>
+            <!-- <div class="spacer"></div>
+            <div class="spacer"></div>
+            <div class="spacer"></div>
+            <div class="spacer"></div> -->
         </div>
-    </header>
+            <video autoplay muted loop>
+                <source src="assets/videos/hero-video-final.mp4" type="video/mp4">
+            </video>
+            <a href="nav-test.html">Watch our Portfolio</a>
+            <div class="ink-partition ip-bottom-hero"></div>
+        </header>
 
-    <!-- middle -->
+        <!-- blurb -->
+        <section class="call-to-action">
+            <div class="ink-partition ip-top-cta"></div>
+            <div id="call-to-actions">
+                <h2>call to action blurb</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus consectetur ex, nec
+                    hendrerit
+                    libero. Nam ac consectetur tortor. Vestibulum semper feugiat nisi a aliquet. Curabitur auctor
+                    sem
+                    vitae
+                    lorem feugiat volutpat. Aliquam erat volutpat. Nunc auctor, nibh eu varius cursus, nunc magna
+                    vehicula
+                    leo, in posuere ligula lectus ac eros. Praesent sit amet risus ac elit convallis
+                    blandit.<br><br>
 
-    <div class="index-layout">
+                    Sed sodales tortor in quam vehicula hendrerit. Duis at mauris rhoncus, varius urna et, sagittis
+                    sapien.
+                    Sed iaculis magna a lacus ultrices lacinia. In aliquet dui pulvinar ante fringilla, quis
+                    lobortis
+                    felis
+                    ultrices. Sed id est efficitur, bibendum augue a, lobortis dolor. Sed scelerisque dolor id
+                    dictum
+                    pellentesque. Phasellus nisi sem, pulvinar sed sollicitudin sollicitudin, rutrum in
+                    justo.<br><br>
+                </p>
+            </div>
+            <div class="ink-partition ip-bottom-cta"></div>
+        </section>
 
-            <!-- hero video -->
-            <section class="hero" id="hero-project">
-                <div class="ink-partition ip-top-hero"></div>
-                <video autoplay muted loop>
-                    <source src="assets/videos/hero-video-final.mp4" type="video/mp4">
-                </video>
-                <a href="nav-test.html">Watch our Portfolio</a>
-                <div class="ink-partition ip-bottom-hero"></div>
-            </section>
+        <!-- contact -->
+        <section class="contact" id="contact-container">
+            <div class="ink-partition ip-top-con"></div>
+            <div id="contact-bg">
+                <div id="form-box">
+                    <form method="post" action="#" class="contact-form">
+                        <h2>Contact Form</h2>
+                        <label for="name">Name</label>
+                        <input class="form-text" id="name" name="name" type="text" required>
 
-            <!-- blurb -->
-            <section class="call-to-action">
-                <div class="ink-partition ip-top-cta"></div>
-                <div id="call-to-actions">
-                    <h2>call to action blurb</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus consectetur ex, nec
-                        hendrerit
-                        libero. Nam ac consectetur tortor. Vestibulum semper feugiat nisi a aliquet. Curabitur auctor
-                        sem
-                        vitae
-                        lorem feugiat volutpat. Aliquam erat volutpat. Nunc auctor, nibh eu varius cursus, nunc magna
-                        vehicula
-                        leo, in posuere ligula lectus ac eros. Praesent sit amet risus ac elit convallis
-                        blandit.<br><br>
+                        <label for="email">Email Address</label>
+                        <input class="form-text" type="email" id="email" name="email" required>
 
-                        Sed sodales tortor in quam vehicula hendrerit. Duis at mauris rhoncus, varius urna et, sagittis
-                        sapien.
-                        Sed iaculis magna a lacus ultrices lacinia. In aliquet dui pulvinar ante fringilla, quis
-                        lobortis
-                        felis
-                        ultrices. Sed id est efficitur, bibendum augue a, lobortis dolor. Sed scelerisque dolor id
-                        dictum
-                        pellentesque. Phasellus nisi sem, pulvinar sed sollicitudin sollicitudin, rutrum in
-                        justo.<br><br>
-                    </p>
+                        <label for="number">Contact Number (Optional)</label>
+                        <input class="form-text" type="tel" id="number" name="number"
+                            pattern="[0-9]{3}-[0-9]{3}-[0-9]{3}-[0-9]{4}">
+
+                        <label for="note">Additional Information</label>
+                        <textarea class="form-text form-note" id="note" name="note"></textarea>
+
+                        <input class="submit-contact" type="submit" value="Contact">
+                    </form>
                 </div>
-                <div class="ink-partition ip-bottom-cta"></div>
-            </section>
-
-            <!-- contact -->
-            <section class="contact" id="contact-container">
-                <div class="ink-partition ip-top-con"></div>
-                <div id="contact-bg">
-                    <div id="form-box">
-                        <form method="post" action="#" class="contact-form">
-                            <h2>Contact Form</h2>
-                            <label for="name">Name</label>
-                            <input class="form-text" id="name" name="name" type="text" required>
-
-                            <label for="email">Email Address</label>
-                            <input class="form-text" type="email" id="email" name="email" required>
-
-                            <label for="number">Contact Number (Optional)</label>
-                            <input class="form-text" type="tel" id="number" name="number"
-                                pattern="[0-9]{3}-[0-9]{3}-[0-9]{3}-[0-9]{4}">
-
-                            <label for="note">Additional Information</label>
-                            <textarea class="form-text form-note" id="note" name="note"></textarea>
-
-                            <input class="submit-contact" type="submit" value="Contact">
-                        </form>
-                    </div>
-                </div>
-                <div class="ink-partition ip-bottom-con"></div>
-            </section>
+            </div>
+            <div class="ink-partition ip-bottom-con"></div>
+        </section>
     </div>
 
     <!-- footer -->
