--- a/nav-contact-html-dump.html
+++ b/nav-contact-html-dump.html
@@ -26,3 +26,29 @@
 </body>
 
 </html>
+
+<section class="contact" id="contact-container">
+    <div class="ink-partition ip-top-con"></div>
+    <div id="contact-bg">
+        <div id="form-box">
+            <form method="post" action="#" class="contact-form">
+                <h2>Contact Form</h2>
+                <label for="name">Name</label>
+                <input class="form-text" id="name" name="name" type="text" required>
+
+                <label for="email">Email Address</label>
+                <input class="form-text" type="email" id="email" name="email" required>
+
+                <label for="number">Contact Number (Optional)</label>
+                <input class="form-text" type="tel" id="number" name="number"
+                    pattern="[0-9]{3}-[0-9]{3}-[0-9]{3}-[0-9]{4}">
+
+                <label for="note">Additional Information</label>
+                <textarea class="form-text form-note" id="note" name="note"></textarea>
+
+                <input class="submit-contact" type="submit" value="Contact">
+            </form>
+        </div>
+    </div>
+    <div class="ink-partition ip-bottom-con"></div>
+</section>
