create screen responsive nav button

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="index-layout">
         <nav>
             <button class="nav-burger">
-                <span><i class="fa-solid fa-bars" id="burger-hide"></i></span>
+                <div id="big-nav">Menu</div><span><i class="fa-solid fa-bars" id="burger-hide"></i></span>
                 <div class="nav-content">
                     <ul>
                         <a href="index.html" alt="home"><li id="nav-active">Home</li></a>
@@ -69,13 +69,14 @@
                     justo.<br><br>
                 </p>
             </div>
-            <div class="ink-partition ip-bottom-cta"></div>
         </section>
     </div>
 
     <!-- footer -->
     <footer>
+        
         <div class="footer" id="social-footer">
+            <div class="ink-partition ip-bottom-cta"></div>
             <div id="social">
                 <h2>Follow us</h2>
                 <ul class="social-buttons">
